Apply FindBugs recommendations.