@@ -28,7 +28,7 @@ public class MapService extends AbstractService {
 
         Long x = map.get(command.getKey());
         if (x == null)
-            x = new Long(0);
+            x = Long.valueOf(0);
 
         x = command.getA() * x + command.getB();
         map.put(command.getKey(), x);
